fix(theme): fix footer z-index on desktop

--- a/packages/theme/src/client/styles/footer.scss
+++ b/packages/theme/src/client/styles/footer.scss
@@ -22,7 +22,7 @@
   }
 
   @media (min-width: hope-config.$pc) {
-    z-index: 150;
+    z-index: 50;
     padding-inline-start: 2rem;
   }
 
